Feature remove obsolete endpoints (#136)
* feature: remove all obsolete get endpoints

* feature: remove all obsolete post endpoints

* feature: remove obsolete delete endpoints

* feature: remove obsolete put endpoints

* refactor: move methods from obsolete files to active files

* refactor: remove obsolete files

* refactor: changes after review

* fix: change endpoint location